--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "@mui/icons-material": "^5.13.7",
     "@mui/material": "^5.14.4",
     "@mui/x-data-grid": "^6.11.2",
+    "@nivo/pie": "^0.83.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "chart.js": "^4.4.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "formik": "^2.4.2",
     "lightweight-charts": "^4.0.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
