--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.4.0",
     "chart.js": "^4.4.0",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "firebase": "^10.6.0",
     "formik": "^2.4.2",
     "lightweight-charts": "^4.0.1",
     "react": "^18.2.0",
